Fixed Overflow Issue Mobile

--- a/sass/partials/_landing-page.scss
+++ b/sass/partials/_landing-page.scss
@@ -1,12 +1,14 @@
-.landing-page {
+body {
     background-color: black;
+}
+
+.landing-page {
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: end;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .stars {
