--- a/sass/styles.css
+++ b/sass/styles.css
@@ -225,15 +225,17 @@ body {
   background-color: red;
 }
 
-.landing-page {
+body {
   background-color: black;
+}
+
+.landing-page {
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: end;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .stars {
